--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 3,
-  "name": "Reading time",
+  "name": "CimShift",
   "version": "1.0",
   "description": "UI tweaks in cim",
 
@@ -13,10 +13,13 @@
   "content_scripts": [
     {
       "js": ["scripts/content.js"],
+      "all_frames": true,
+      "run_at": "document_start",
       "matches": [
         "https://developer.chrome.com/docs/extensions/*",
         "https://developer.chrome.com/docs/webstore/*",
-        "https://nextbulletin.temple.edu/programadmin/*"
+        "https://nextbulletin.temple.edu/programadmin/*", 
+        "https://nextbulletin.temple.edu/courseleaf/*"
       ]
     }
   ]
