--- a/manifest.json
+++ b/manifest.json
@@ -9,17 +9,37 @@
     "48": "images/icon-48.png",
     "128": "images/icon-128.png"
   },
+  "background": {
+    "service_worker": "background.js"
+  },
+  "web_accessible_resources": [
+    {
+      "resources": [
+        "predefined_searches.json"
+      ],
+      "matches": [
+        "https://nextbulletin.temple.edu/*"
+      ]
+    }
+  ],
   "content_scripts": [
     {
       "js": [
-        "content.js"
+        "content_programadmin.js"
+      ],
+      "matches": [
+        "https://nextbulletin.temple.edu/programadmin/*"
+      ]
+    },
+    {
+      "js": [
+        "content_programadmin_frames.js"
       ],
       "css": [
         "cimshift.css"
       ],
       "all_frames": true,
       "matches": [
-        "https://nextbulletin.temple.edu/programadmin/*",
         "https://nextbulletin.temple.edu/courseleaf/*"
       ]
     }
