--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 3,
-  "name": "CimShift",
+  "name": "MoreInfo",
   "version": "1.0",
   "description": "UI tweaks in cim",
   "icons": {
@@ -8,9 +8,6 @@
     "32": "images/icon-32.png",
     "48": "images/icon-48.png",
     "128": "images/icon-128.png"
-  },
-  "background": {
-    "service_worker": "background.js"
   },
   "web_accessible_resources": [
     {
@@ -27,20 +24,11 @@
       "js": [
         "content_programadmin.js"
       ],
+      "css": [
+        "resize_frames.css"
+      ],
       "matches": [
         "https://nextbulletin.temple.edu/programadmin/*"
-      ]
-    },
-    {
-      "js": [
-        "content_programadmin_frames.js"
-      ],
-      "css": [
-        "cimshift.css"
-      ],
-      "all_frames": true,
-      "matches": [
-        "https://nextbulletin.temple.edu/courseleaf/*"
       ]
     }
   ]
