Add Summarize details to instruction text

--- a/manifest.json
+++ b/manifest.json
@@ -22,7 +22,8 @@
   "content_scripts": [
     {
       "js": [
-        "content_programadmin.js"
+        "summary_help.js",
+        "add_predefined_searches.js"
       ],
       "css": [
         "resize_frames.css"
