--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
-  "name": "MoreInfo",
+  "name": " nextbulletin rework UI",
   "version": "1.0",
-  "description": "UI tweaks in cim",
+  "description": "Rework user interface for cim nextbulletin.temple.edu/programadmin ",
   "icons": {
     "16": "images/icon-16.png",
     "32": "images/icon-32.png",
