--- a/manifest.json
+++ b/manifest.json
@@ -2,23 +2,13 @@
   "manifest_version": 3,
   "name": " nextbulletin rework UI",
   "version": "1.0",
-  "description": "Rework user interface for cim nextbulletin.temple.edu/programadmin ",
+  "description": "Add predifined searches and simplify web page for Temple University Program Admin web page.",
   "icons": {
     "16": "images/icon-16.png",
     "32": "images/icon-32.png",
     "48": "images/icon-48.png",
     "128": "images/icon-128.png"
   },
-  "web_accessible_resources": [
-    {
-      "resources": [
-        "predefined_searches.json"
-      ],
-      "matches": [
-        "https://nextbulletin.temple.edu/*"
-      ]
-    }
-  ],
   "content_scripts": [
     {
       "js": [
